[gd_scene load_steps=2 format=3 uid="uid://c8hvk3p8m2w71"]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1"]

[node name="SettingsMenu" type="Panel"]
custom_minimum_size = Vector2(700, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Graphics" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
metadata/_tab_index = 0

[node name="GraphicsTab" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Graphics"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="FullscreenCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/GraphicsTab"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Fullscreen"

[node name="VsyncCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/GraphicsTab"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "VSync"

[node name="ResolutionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/GraphicsTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/GraphicsTab/ResolutionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/GraphicsTab/ResolutionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="QualityContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/GraphicsTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/GraphicsTab/QualityContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Quality Level"

[node name="QualityOption" type="OptionButton" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/GraphicsTab/QualityContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="Audio" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
metadata/_tab_index = 1

[node name="AudioTab" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="MuteCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Mute All Audio"

[node name="MasterVolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab/MasterVolumeContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab/MasterVolumeContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Master Volume"

[node name="MasterValueLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab/MasterVolumeContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "100%"

[node name="MasterVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab/MasterVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab/MusicVolumeContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab/MusicVolumeContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Music Volume"

[node name="MusicValueLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab/MusicVolumeContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "70%"

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab/MusicVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.7

[node name="SfxVolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab/SfxVolumeContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab/SfxVolumeContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "SFX Volume"

[node name="SfxValueLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab/SfxVolumeContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "80%"

[node name="SfxVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/AudioTab/SfxVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="Controls" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
metadata/_tab_index = 2

[node name="ControlsTab" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="EdgeScrollCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ControlsTab"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Enable Edge Scrolling"

[node name="MouseSensitivityContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ControlsTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ControlsTab/MouseSensitivityContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ControlsTab/MouseSensitivityContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Mouse Sensitivity"

[node name="MouseSensLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ControlsTab/MouseSensitivityContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "1.0x"

[node name="MouseSensitivitySlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ControlsTab/MouseSensitivityContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="CameraSpeedContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ControlsTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ControlsTab/CameraSpeedContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ControlsTab/CameraSpeedContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Camera Speed"

[node name="CameraSpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ControlsTab/CameraSpeedContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "1.0x"

[node name="CameraSpeedSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ControlsTab/CameraSpeedContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="DefaultsButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Defaults"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Cancel"

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Apply"
